attempt to fix horizontal scroll bar in smaller devices
seems that the cause of the horizontal scroll bar is the fixed width of the lines in the bossing section.  Testing to see on smaller devices if the horizontal scroll bar will go away when the width becomes auto with a new media query

--- a/home.css
+++ b/home.css
@@ -363,7 +363,6 @@ a:hover {
   width: 307px;
   padding-top: 10px;
   padding-bottom: 10px;
-  width: 307px;
   color: #FF7BA5;
   font-family: "Source Sans Pro";
   font-size: 24px;
@@ -728,6 +727,16 @@ hr {
   width: min-content;
 }
 
+
+/* If the screen size is 308px or less, set stuff to whatever I said */
+@media only screen and (max-width: 308px) {
+
+  .prices {
+    width: auto;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+}
 
 /* If the screen size is 400px or less, set stuff to whatever I said */
 
